Flush memory correctly during ring put. See PR 51199.

From Sprow, ok skrll@.